fix overflow error

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -47,7 +47,7 @@ body, #root {
 }
 
 #main {
-  height: 100%;
+  min-height: 100%;
   align-items: center;
   justify-content: center;
   flex-direction: column;
@@ -58,6 +58,7 @@ body, #root {
   display: flex;
   flex-grow: 1;
   justify-content: center;
+  overflow: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
